# permcon-rust

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  lib.rs  main.rs  octal.rs  perm.rs  symbolic.rs  utils.rs
