[package]
name = "permcon"
version = "1.0.0"
edition = "2021"
license = "MIT"
authors = ["Muhammad Sifat Hossain <reach@sifat.cc>"]
description = "A simple library/CLI to parse Linux file permissions and convert them between symbolic and octal notation."
repository = "https://github.com/h-sifat/permcon-rust"


[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.10.4"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
yansi = "1.0.1"

[[bin]]
name = "permcon"
path = "src/main.rs"
